--- a/frontend-cancer/src/components/Individuals/Individuals.css
+++ b/frontend-cancer/src/components/Individuals/Individuals.css
@@ -214,18 +214,18 @@ h4 {
       transform: rotate(360deg);
     }
   }
-  .loading-spinner {
-    width: 50px;
+  .volta {
     height: 50px;
-    border: 10px solid #f3f3f3; /* Light grey */
-    border-top: 10px solid #383636; /* Blue */
+    width: 50px;
+    border: 10px solid #f3f3f3;
+    border-top: 10px solid #34495e;
     border-radius: 50%;
     animation: spinner 1.5s linear infinite;
   }
   
-  .spinner-container {
+  .contenidorvolta {
     display: grid;
-    justify-content: center;
     align-items: center;
     height: 350px;
+    justify-content: center;
   }
